<?xml version="1.0"?>
<package>
		<name>visual_servoing</name>
		<version>1.0.0</version>
		<description>Package for visual servoing</description>
		<maintainer email="aaronhuang@cmu.edu">aaronhuang</maintainer>
		<license>TODO</license>
		<buildtool_depend>catkin</buildtool_depend>
		<build_depend>roscpp</build_depend>
		<build_depend>rospy</build_depend>
		<build_depend>tf</build_depend>
		<build_depend>std_msgs</build_depend>
		<build_depend>sensor_msgs</build_depend>
		<build_depend>geometry_msgs</build_depend>
		<build_depend>roslaunch</build_depend>
		<run_depend>roscpp</run_depend>
		<run_depend>rospy</run_depend>
		<run_depend>tf</run_depend>
		<run_depend>std_msgs</run_depend>
		<run_depend>sensor_msgs</run_depend>
		<run_depend>geometry_msgs</run_depend>
		<run_depend>roslaunch</run_depend>
		<export>
		</export>
</package>
